# plainva

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  trivy-secret.yaml  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  cla.yml  codeql.yml  ios.yml  native-smoke.yml  release-mobile.yml  release.yml
.husky/: pre-push
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  playwright.prod.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
apps/desktop/e2e/: backup.spec.ts  base.spec.ts  calendar.spec.ts  cascade-delete.spec.ts  editor-stability.spec.ts  find-replace.spec.ts  graph.spec.ts  i18n.spec.ts  mail.spec.ts  search.spec.ts  shortcuts.spec.ts  smoke.spec.ts  tasks.spec.ts  theming.spec.ts  types.d.ts
apps/desktop/e2e-prod/: prod-smoke.spec.ts
apps/desktop/scripts/: crash-drill-check.ps1
apps/desktop/src/: App.css  App.tsx  designGuards.test.ts  designLint.test.ts  docsParity.test.ts  i18n.ts  localeParity.test.ts  main.tsx  platformBoundary.test.ts  sharedUiPurity.test.ts  sourceEncoding.test.ts  test-localstorage.ts  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: atomic_write.rs  backup.rs  db_batch.rs  lib.rs  mail_imap.rs  mail_smtp.rs  main.rs
apps/desktop/wdio/: smoke.e2e.ts
apps/mobile/: README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/scripts/: dev-webdav.mjs
apps/mobile/src/: AddVaultScreen.tsx  App.tsx  BaseReadView.tsx  BookmarksScreen.tsx  EditorHost.tsx  SettingsScreen.tsx  SyncScreen.tsx  TagsScreen.tsx  VaultDetailScreen.tsx  appStructure.test.ts  main.tsx  mobile.css  mobileLint.test.ts  navigation.test.ts  navigation.ts
docs/adr/: 0000-template.md  0001-monorepo-pnpm-turborepo.md  0002-app-stack-baseline.md  0003-markdown-roundtrip-spike.md  0004-google-drive-byo-and-webdav.md  0005-credential-storage-and-os-keystore.md  0006-google-drive-oauth-approach.md  0007-desktop-filesystem-scope.md  0008-rich-property-types-via-base-schema.md  0009-plainva-frontmatter-namespace-okf-write-path.md  0010-graph-engine-canvas.md  0011-capacitor-mobile-shell-shared-ui.md  0012-plainva-ui-2.0-m3-expressive.md  0013-settings-sync-and-content-e2e-lifecycle.md  0014-encrypted-workspace-protocol.md  README.md
docs/assets/: SCREENSHOTS.md
docs/engineering/: Design_Language.md  Encrypted_Workspace_Protocol.md  Encrypted_Workspace_Security_Review.md  Encrypted_Workspace_Threat_Model.md  Mobile_Release_Gate.md  Obsidian_Base_Compatibility_Check.md  Performance_Notes.md  Release_Gate_Checklist.md  Settings_Sync_Encryption_Protocol.md  Theme_Platform.md  Translation_Glossary.md  WebDriver_Smoke.md  design-styleguide.html
docs/testing/: Native_Acceptance_Protocol.md
docs/user/: README.md
docs/user/de/: Automation_and_Scripts.md  Backups_and_Versioning.md  Calendar_and_Tasks.md  Databases_Base.md  Email_Capture.md  FAQ.md  File_Format_Reference.md  Getting_Started.md  Google_Drive_BYO_Guide.md  Graph.md  Keyboard_Shortcuts.md  Mobile_App.md  Notes_and_Markdown.md  OKF.md  OneDrive_and_Dropbox_BYO_Guide.md  README.md  Search.md  Security_and_Sharing.md  Sync_Compatibility.md  Sync_Setup.md  Tasks.md
docs/user/en/: Automation_and_Scripts.md  Backups_and_Versioning.md  Calendar_and_Tasks.md  Databases_Base.md  Email_Capture.md  FAQ.md  File_Format_Reference.md  Getting_Started.md  Google_Drive_BYO_Guide.md  Graph.md  Keyboard_Shortcuts.md  Mobile_App.md  Notes_and_Markdown.md  OKF.md  OneDrive_and_Dropbox_BYO_Guide.md  README.md  Search.md  Security_and_Sharing.md  Sync_Compatibility.md  Sync_Setup.md  Tasks.md
docs/user/es/: Automation_and_Scripts.md  Backups_and_Versioning.md  Calendar_and_Tasks.md  Databases_Base.md  Email_Capture.md  FAQ.md  File_Format_Reference.md  Getting_Started.md  Google_Drive_BYO_Guide.md  Graph.md  Keyboard_Shortcuts.md  Mobile_App.md  Notes_and_Markdown.md  OKF.md  OneDrive_and_Dropbox_BYO_Guide.md  README.md  Search.md  Security_and_Sharing.md  Sync_Compatibility.md  Sync_Setup.md  Tasks.md
docs/user/fr/: Automation_and_Scripts.md  Backups_and_Versioning.md  Calendar_and_Tasks.md  Databases_Base.md  Email_Capture.md  FAQ.md  File_Format_Reference.md  Getting_Started.md  Google_Drive_BYO_Guide.md  Graph.md  Keyboard_Shortcuts.md  Mobile_App.md  Notes_and_Markdown.md  OKF.md  OneDrive_and_Dropbox_BYO_Guide.md  README.md  Search.md  Security_and_Sharing.md  Sync_Compatibility.md  Sync_Setup.md  Tasks.md
docs/user/it/: Automation_and_Scripts.md  Backups_and_Versioning.md  Calendar_and_Tasks.md  Databases_Base.md  Email_Capture.md  FAQ.md  File_Format_Reference.md  Getting_Started.md  Google_Drive_BYO_Guide.md  Graph.md  Keyboard_Shortcuts.md  Mobile_App.md  Notes_and_Markdown.md  OKF.md  OneDrive_and_Dropbox_BYO_Guide.md  README.md  Search.md  Security_and_Sharing.md  Sync_Compatibility.md  Sync_Setup.md  Tasks.md
docs/user/ja/: Automation_and_Scripts.md  Backups_and_Versioning.md  FAQ.md  OKF.md  (+17 more)
plugins/: README.md
scripts/: gen-test-vault.mjs  generate_500_mocks.sh
(+687 files in other folders)
