[package]
name = "plainva-desktop"
version = "0.4.1"
description = "Plainva - a Markdown vault editor"
authors = ["Plainva contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plainva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# Direct sqlx (already linked transitively by tauri-plugin-sql — no second SQLite
# is bundled) for the db_batch command: one transactional, ordered statement batch
# on a single connection (BEGIN/COMMIT/ROLLBACK) — atomic and far fewer IPC hops
# than one execute() per row. runtime-tokio matches Tauri's async runtime.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "^2"
# OS keychain (ADR 0005, A6). Platform-native backends: macOS Keychain, Windows
# Credential Manager, Linux Secret Service. NOTE (maintainer): the exact Linux
# feature/crypto flags below are unverified in the AI harness (no cargo); verify the
# native build, especially the secret-service/DBus path, before release.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
trash = "5.2.6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
walkdir = "2.5.0"
# Direct reqwest for the OAuth token POST (oauth_token_request): a native HTTP client
# sends NO Origin header, unlike the webview fetch (Azure AADSTS90023). tauri-plugin-http
# already pulls reqwest 0.12; the rustls-tls feature keeps it OpenSSL-free cross-platform.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Binary payloads for write_file_atomic travel as base64 strings over the IPC
# (a JSON number-array would be ~4x the size; raw bodies don't mix with params).
base64 = "0.22"
# Read-only IMAP mail capture (PIM stage 5). The sync imap client runs inside
# spawn_blocking; TLS goes through rustls over a plain TcpStream so the app
# stays OpenSSL-free cross-platform (same decision as reqwest above).
imap = { version = "2.4", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
# RFC 5322/2047/MIME parsing (headers, multipart bodies, attachments).
mail-parser = "0.11"
# MIME construction for the stage-6 IMAP-APPEND draft (multipart/alternative
# with correct RFC 2047 header encoding — hand-rolling that invites bugs).
mail-builder = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
